--- a/spectrum-ejb/pom.xml
+++ b/spectrum-ejb/pom.xml
@@ -16,6 +16,22 @@
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 		</dependency>
+		
+		
+			<!--Mail dependency-->
+
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>javax.mail-api</artifactId>
+    <version>1.5.2</version>
+</dependency>
+<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.0</version>
+</dependency>
+		
+		
 	</dependencies>
 
 	<build>
