--- a/spectrum-web/src/main/webapp/WEB-INF/web.xml
+++ b/spectrum-web/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  <context-param>
+  <param-name>primefaces.UPLOADER</param-name>
+  <param-value>auto</param-value>
+</context-param>
 </web-app>
