--- a/spectrum-ejb/pom.xml
+++ b/spectrum-ejb/pom.xml
@@ -19,7 +19,11 @@
 		
 		
 			<!--Mail dependency-->
-
+<dependency>
+   			 <groupId>com.jfoenix</groupId>
+   			 <artifactId>jfoenix</artifactId>
+    		<version>1.4.0</version>
+		</dependency>
 <dependency>
     <groupId>javax.mail</groupId>
     <artifactId>javax.mail-api</artifactId>
