--- a/spectrum-web/pom.xml
+++ b/spectrum-web/pom.xml
@@ -43,6 +43,11 @@
 		    <artifactId>mail</artifactId>
 		    <version>1.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>3.141.59</version>
+		</dependency>
 		
 	</dependencies>
 	<repositories>
