--- a/spectrum-web/pom.xml
+++ b/spectrum-web/pom.xml
@@ -44,11 +44,10 @@
 		    <version>1.4</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.seleniumhq.selenium</groupId>
-		    <artifactId>selenium-java</artifactId>
-		    <version>3.141.59</version>
+			<groupId>org.chartistjsf</groupId>
+			<artifactId>ChartistJSF</artifactId>
+			<version>2.1</version>
 		</dependency>
-		
 	</dependencies>
 	<repositories>
 		<repository>
