--- a/spectrum-web/pom.xml
+++ b/spectrum-web/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>ChartistJSF</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>net.bootsfaces</groupId>
+		    <artifactId>bootsfaces</artifactId>
+		    <version>1.4.1</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
